--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,13 +5,21 @@
     margin-bottom: 0px;
 }
 
-footer {
+html {
+    position: relative;
+    min-height: 100%;
+}
 
+body {
+    margin-bottom: 20px; /* Margin bottom by footer height */
+}
+
+.page-footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 30px; /* Set the fixed height of the footer here */
-    line-height: 20px; /* Vertically center the text there */
+    height: 20px; /* Set the fixed height of the footer here */
+    line-height: 30px; /* Vertically center the text there */
 }
 
 .foot-style{
