--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,7 +14,11 @@ body {
     margin-bottom: 20px; /* Margin bottom by footer height */
 }
 
-.navbar {
+.main-container {
+    margin-top: 20px;
+}
+
+.card {
     margin-bottom: 20px;
 }
 
@@ -38,4 +42,8 @@ body {
 .foot-link:hover{
     color: white;
     text-decoration: none;
+}
+
+.fa-trash-alt:hover{
+    color: red;
 }
