--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,10 @@ body {
     margin-bottom: 20px;
 }
 
+.btn-block{
+    margin-bottom: 20px;
+}
+
 .page-footer {
     position: absolute;
     bottom: 0;
@@ -46,4 +50,10 @@ body {
 
 .fa-trash-alt:hover{
     color: red;
+}
+
+a.custom-card,
+a.custom-card:hover {
+  color: inherit;
+  text-decoration: none;
 }
