--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background-image: url("http://buckinspire.com/wp-content/uploads/2014/10/vacation_time-1494435.jpg");
+    background-image: url(../img/jumbotron-bg.jpg);
     background-size: cover;
     background-position: center;
     margin-bottom: 0px;
