--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,7 +287,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   #nav-menu-container {
     display: none;
   }
@@ -382,7 +382,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   #mobile-nav-toggle {
     display: inline;
   }
@@ -502,7 +502,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-container .background {
   max-width: 60%;
-  background: url(../img/about-img.jpg);
+  background: url(../img/about-img.png);
   margin-bottom: 10px;
   background-size: cover;
   background-position: center;
